# atc-transcribe-test

./: .gitignore  Dockerfile  README.md  main.py  pyproject.toml  requirements.txt
